Refactor JSON parsing and improve error logging and formatting
* refactor: migrate JSON parsing from json-simple to Gson and update error logging to use Throwable

* refactor: remove test data and fix timestamp formatting in database records